--- a/web/package.json
+++ b/web/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "build": "gatsby build",
     "deploy": "npm run now-deploy",
-    "develop": "gatsby develop",
+    "develop": "gatsby develop -H",
     "empty-cache": "gatsby clean",
     "lint": "eslint .",
     "now-build": "npm run build",
@@ -22,6 +22,7 @@
     "test": "echo \"Write tests! -> https://gatsby.app/unit-testing\""
   },
   "dependencies": {
+    "@cloudflare/wrangler": "^1.8.4",
     "@sanity/block-content-to-react": "^2.0.7",
     "@sanity/image-url": "^0.140.15",
     "date-fns": "^1.30.1",
@@ -32,10 +33,10 @@
     "gatsby-source-sanity": "^5.0.4",
     "postcss-import": "^12.0.1",
     "postcss-preset-env": "^6.7.0",
+    "pure-react-carousel": "^1.27.5",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1",
-    "@cloudflare/wrangler": "^1.8.4"
+    "react-helmet": "^5.2.1"
   },
   "devDependencies": {
     "eslint": "^6.7.2",
